# ADEPT-test

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  api.yaml  docker-compose.yml  readme.md
.github/workflows/: ci.yaml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
postgresql/data/: initial.sql
postgresql/objects_db/: 000_init_objects.sql
postgresql/schemas/objects_db/: 000_init_objects.sql
scripts/: generate_sql_queries.py
service/: main.cpp
src/: schema_file_distributor.hpp
src/api/: datetime.hpp  decimal.hpp  group.hpp  object.hpp
src/codegen/: sql.cpp  sql.hpp
src/models/: basic_object_repository.hpp  pg_object_repository.cpp  pg_object_repository.hpp
src/sql/: add_object.sql  get_all.sql  group_by_time.sql
src/views/group/distance/: handler.cpp  handler.hpp
src/views/group/name/: handler.cpp  handler.hpp
src/views/group/time/: handler.cpp  handler.hpp
src/views/group/type/: handler.cpp  handler.hpp
src/views/object/post/: handler.cpp  handler.hpp
tests/: conftest.py  objects_db.py  test_create_object.py  test_group_distance.py  test_group_name.py  test_group_time.py  test_group_type.py
